# character_elicitation

./: .gitignore  .gitmodules  README.md  debug_router.py  inspect_results.py  pyproject.toml  requirements.txt  save_prompts.py  setup.py  verify_elicitation.py
character/: __init__.py  constants.py  elicitation.py  elo_calculation.ipynb  heal_elicitation.py  judgements.py  utils.py
character.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
character/convergence/: convergence_results.md
clients/: __init__.py  conftest.py  openrouter_client.py  test_client.py  test_openrouter_client.py  test_openrouter_integration.py
common/: request.py
data/: claude-haiku-4.5.pkl  deepseek-v3.2.pkl  gemini-3-flash-preview.pkl  gemma-3-4b-it.pkl  gpt-5.1.pkl  grok-4.1-fast.pkl  kimi-k2-thinking.pkl  ministral-14b-2512.pkl  qwen3-vl-235b-a22b-thinking.pkl  trinity-mini.pkl
prod_env/: model_deployments.yaml
prompts/: data-00000-of-00001.arrow  dataset_info.json  state.json
tools/: interactive_base.py  interactive_it.py
