[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "character-elicitation"
version = "0.1.0"
description = "Character training elictation"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "sm2783" }]

[tool.setuptools.packages.find]
where = ["."]
include = ["character*", "clients*", "common*", "prod_env*"]

[tool.setuptools.package-data]
prod_env = ["*.yaml", "*.conf"]
