[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "character-elicitation"
version = "0.1.0"
description = "Character training elictation"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "sm2783" }]

dependencies = [
    # Core ML/AI dependencies
    "accelerate",
    "bitsandbytes",
    "datasets~=3.0",
    "einops",
    "evaluate",
    "jsonlines",
    "matplotlib",
    "packaging",
    "scikit-learn>=1.1",
    "tqdm~=4.64",
    "transformers~=4.40",
    "transformers_stream_generator",
    "wheel",
    
    # OpenRouter client dependencies
    "openai~=1.70",
    "pydantic~=2.0",
    "typing-extensions~=4.0",
    "pyyaml",
    
    # Testing
    "pytest",
    "pytest-mock",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "ipywidgets",
    "isort",
]

# Note: HELM must be installed separately from local checkout:
#   pip install -e "../helm[openai]"

[tool.setuptools.packages.find]
where = ["."]
include = ["character*", "clients*", "common*", "prod_env*"]

[tool.setuptools.package-data]
prod_env = ["*.yaml", "*.conf"]
