[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "character-elicitation"
version = "0.1.0"
description = "Character training elicitation"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Avinash Krishna, Kalyana Chadalavada" }]

dependencies = [
    "accelerate",
    "bitsandbytes",
    "datasets",
    "einops",
    "evaluate",
    "jsonlines",
    "matplotlib",
    "packaging",
    "scikit-learn",
    "tqdm",
    "transformers",
    "transformers_stream_generator",
    "wheel",
    "python-dotenv",
    "pydantic~=2.0",
    "typing-extensions~=4.0",
    "pyyaml",
    "requests",
    "pytest",
    "pytest-mock",
    "torch>=2.9.1",
    "click>=8.3.1",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "ipywidgets",
    "isort",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["character*", "clients*", "prod_env*"]

[tool.setuptools.package-data]
prod_env = ["*.yaml", "*.conf"]
